fix issue with overflowwing text in aside bar

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ img {
 	display: flex;
 }
 .aside {
+	min-width: min-content;
 	flex-basis: 25%;
 	display: flex;
 	flex-direction: column;
